# ssrf

./: README.md  pyproject.toml
src/ssrf/: core.py
src/tmp/: core.py  testing.py  testing2.py  tmp.py
tests/: tests_core.py
